# covid19

./: .gitignore  README.md  analysis.ipynb  analysis.py  convert_html.sh  covid.py  covid19-internazionale.ipynb  covid19-italia.html  covid19-italia.ipynb  covid19-lombardia.ipynb  covid19-piemonte.ipynb  publish_to_github.sh  publish_to_heroku.sh  pyproject.toml  shortened_url.txt  update.sh
