[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Andrea Iosio <andrea.iosio@rgigroup.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
pandas = "^1.1"
plotly = "^4.9"
numpy = "^1.19"
scipy = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
