[tool.poetry]
name = "covid19"
version = "0.1.0"
description = "generate reports from covid19 public data"
authors = ["Andrea Iosio <aiosio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
pandas = "^1.1"
plotly = "^4.9"
numpy = "^1.19"
scipy = "^1.5"
fbprophet = "^0.6"
plotlyhtmlexporter = "^0.0.2"
jupyter-contrib-nbextensions = "^0.5.1"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
ipywidgets = "^7.5"
ipython = "^7.16"
nbconvert = {version = "^6.0.0b7", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
